--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <section class="container">
       <header>Registration Form</header>
-      <form action="#" class="form">
+      <form action="/" class="form" onsubmit="reset()">
         <div class="input-box">
           <label>Full Name</label>
           <input type="text" placeholder="Enter full name" required />
@@ -26,10 +26,6 @@
           <div class="input-box">
             <label>Phone Number</label>
             <input type="number" placeholder="Enter phone number" required />
-          </div>
-          <div class="input-box">
-            <label>Birth Date</label>
-            <input type="date" placeholder="Enter birth date" required />
           </div>
         </div>
         <div class="gender-box">
@@ -52,7 +48,6 @@
         <div class="input-box address">
           <label>Address</label>
           <input type="text" placeholder="Enter street address" required />
-          <input type="text" placeholder="Enter street address line 2" required />
           <div class="column">
             <div class="select-box">
               <select>
